# ChangeLog for dev-ruby/actionpack
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.112 2009/07/22 06:48:37 graaff Exp $

*actionpack-2.3.3 (22 Jul 2009)

  22 Jul 2009; Hans de Graaff <graaff@gentoo.org> +actionpack-2.3.3.ebuild:
  Version bump for Rails 2.33.3. Fix escaping of cookies in TestResponse.

  28 May 2009; Raúl Porcel <armin76@gentoo.org> actionpack-2.3.2.ebuild:
  ia64 stable wrt #270331

  24 May 2009; Markus Meier <maekke@gentoo.org> actionpack-2.3.2.ebuild:
  x86 stable, bug #270331

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org>
  actionpack-2.3.2.ebuild:
  stable amd64, bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> actionpack-2.3.2.ebuild:
  Marking actionpack-2.3.2 ppc64 stable for bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> actionpack-2.3.2.ebuild:
  Marking actionpack-2.3.2 ppc stable for bug 270331

  18 May 2009; Ferris McCormick <fmccor@gentoo.org> actionpack-2.3.2.ebuild:
  Sparc stable, Bug #270331.

  18 May 2009; Hans de Graaff <graaff@gentoo.org> -actionpack-2.1.2.ebuild:
  Remove old and vulnerable version.

  25 Mar 2009; Raúl Porcel <armin76@gentoo.org> actionpack-2.1.2-r1.ebuild:
  ia64/sparc stable wrt #247549

  18 Mar 2009; Brent Baude <ranger@gentoo.org> actionpack-2.1.2-r1.ebuild:
  Marking actionpack-2.1.2-r1 ppc for bug 247549

*actionpack-2.3.2 (17 Mar 2009)

  17 Mar 2009; Alex Legler <a3li@gentoo.org> +actionpack-2.3.2.ebuild:
  Version bump

  15 Mar 2009; Markus Meier <maekke@gentoo.org> actionpack-2.1.2-r1.ebuild:
  amd64/x86 stable, bug #247549

  15 Mar 2009; Brent Baude <ranger@gentoo.org> actionpack-2.1.2-r1.ebuild:
  Marking actionpack-2.1.2-r1 ppc64 for bug 247549

*actionpack-2.1.2-r1 (14 Mar 2009)

  14 Mar 2009; Alex Legler <a3li@gentoo.org>
  +files/2.1.2-csrf-circumvention.patch, +actionpack-2.1.2-r1.ebuild:
  Revbump to include patch for secbug #247549 for 2.1.2.
